[package]
name = "hashpass-machine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
num_cpus = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
