[package]
name = "hashpass-machine"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
hex = "0.4"
futures-util = "0.3"
num_cpus = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
